--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
 
+    implementation 'org.modelmapper:modelmapper:3.2.0'
 }
 
 tasks.named('bootBuildImage') {
