--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
 
     implementation 'org.modelmapper:modelmapper:3.2.0'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('bootBuildImage') {
