--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation 'net.coobird:thumbnailator:0.4.20'
+
 }
 
 tasks.named('bootBuildImage') {
