--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,20 @@
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= ${DB_URL}
 
-spring.datasource.username=${DB_USERNAME}
+spring.datasource.url= ${DB_URL}
+spring.datasource.username= ${DB_USER}
 spring.datasource.password= ${DB_PASSWORD} 
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework=info
 logging.level.com.sparta.newsfeed=debug
 
-jwt.secret.key : ${SECRET_KEY}
+jwt.secret.key=${SECRET_KEY}
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=/Users/gwonjunhyeog/Documents/workspace/news-feed/upload
